--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -86,3 +86,21 @@ i.cc.SLG, i.cc.SLG-alt { color: #5A6875; }
 i.cc.USDT, i.cc.USDT-alt { color: #2CA07A; }
 i.cc.ZEIT, i.cc.ZEIT-alt { color: #ACACAC; }
 i.cc.DGD, i.cc.DGX { color: #D8A24A; }
+i.cc.ADC, i.cc.ADC-alt { color: #3CB0E5; }
+i.cc.BSD, i.cc.BSD-alt { color: #1186E7; }
+i.cc.DAO, i.cc.DAO-alt { color: #FF3B3B; }
+i.cc.ERC, i.cc.ERC-alt { color: #101E84; }
+i.cc.ETC, i.cc.ETC-alt { color: #669073; }
+i.cc.GLD, i.cc.GLD-alt { color: #E8BE24; }
+i.cc.GRS { color: #648FA0; }
+i.cc.KOBO { color: #80C342; }
+i.cc.LBC, i.cc.LBC-alt { color: #015C47; }
+i.cc.PINK, i.cc.PINK-alt { color: #ED31CA; }
+i.cc.RDD, i.cc.RDD-alt { color: #ED1C24; }
+i.cc.RISE, i.cc.RISE-alt { color: #43CEA2; }
+i.cc.SIA, i.cc.SIA-alt { color: #00CBA0; }
+i.cc.SLS, i.cc.SLS-alt { color: #1EB549; }
+i.cc.SNRG, i.cc.SNRG-alt { color: #160363; }
+i.cc.STEEM, i.cc.STEEM-alt { color: #1A5099; }
+i.cc.STRAT, i.cc.STRAT-alt { color: #33C7F5; }
+i.cc.SWIFT, i.cc.SWIFT-alt { color: #428BCA; }
