--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -1,106 +1,113 @@
-i.cc.ARCH, i.cc.ARCH-alt { color: #002652; }
-i.cc.BANX, i.cc.BANX-alt { color: #225BA6; }
-i.cc.BC, i.cc.BC-alt { color: #202121; }
-i.cc.BCN, i.cc.BCN-alt { color: #964F51; }
-i.cc.BTC, i.cc.BTC-alt { color: #F7931A; }
-i.cc.BTCD, i.cc.BTCD-alt { color: #2A72DC; }
-i.cc.BTS, i.cc.BTS-alt { color: #03A9E0; }
-i.cc.DASH, i.cc.DASH-alt { color: #1c75bc; }
-i.cc.DOGE, i.cc.DOGE-alt { color: #BA9F33; }
-i.cc.FC2, i.cc.FC2-alt { color: #040405; }
-i.cc.FTC, i.cc.FTC-alt { color: #679EF1; }
-i.cc.GEMZ, i.cc.GEMZ-alt { color: #e86060; }
-i.cc.GRC, i.cc.GRC-alt { color: #88A13C; }
-i.cc.IFC, i.cc.IFC-alt { color: #ed272d; }
-i.cc.KORE, i.cc.KORE-alt { color: #DF4124; }
-i.cc.LTC, i.cc.LTC-alt { color: #838383; }
-i.cc.MAID, i.cc.MAID-alt { color: #5492D6; }
-i.cc.MSC, i.cc.MSC-alt { color: #1D4983; }
-i.cc.NBT { color: #FFC93D; }
-i.cc.NMC, i.cc.NMC-alt { color: #6787B7; }
-i.cc.NOTE, i.cc.NOTE-alt { color: #42daff; }
-i.cc.NXT, i.cc.NXT-alt { color: #008FBB; }
-i.cc.OPAL, i.cc.OPAL-alt { color: #7193AA; }
-i.cc.POT, i.cc.POT-alt { color: #105B2F; }
-i.cc.PPC, i.cc.PPC-alt { color: #3FA30C; }
-i.cc.QRK, i.cc.QRK-alt { color: #22AABF; }
-i.cc.RBT, i.cc.RBT-alt { color: #0d4982; }
-i.cc.SDC, i.cc.SDC-alt { color: #981D2D; }
-i.cc.STR, i.cc.STR-alt { color: #08B5E5; }
-i.cc.SYNC, i.cc.SYNC-alt { color: #008DD2; }
-i.cc.UNITY, i.cc.UNITY-alt { color: #ED8527; }
-i.cc.VIOR, i.cc.VIOR-alt { color: #1F52A4; }
-i.cc.VPN, i.cc.VPN-alt { color: #589700; }
-i.cc.VRC, i.cc.VRC-alt { color: #418bca; }
-i.cc.VTC, i.cc.VTC-alt { color: #1b5c2e; }
-i.cc.XCP, i.cc.XCP-alt { color: #EC1550; }
-i.cc.XEM, i.cc.XEM-alt { color: #41bf76; }
-i.cc.XMR { color: #FF6600; }
-i.cc.XRP, i.cc.XRP-alt { color: #346AA9; }
-i.cc.YBC, i.cc.YBC-alt { color: #D6C154; }
-i.cc.DMD, i.cc.DMD-alt { color: #5497b2; }
-i.cc.FRK, i.cc.FRK-alt { color: #0633cd; }
-i.cc.IOC, i.cc.IOC-alt { color: #2fa3de; }
-i.cc.LDOGE, i.cc.LDOGE-alt { color: #ffcc00; }
-i.cc.MTR, i.cc.MTR-alt { color: #b92429; }
-i.cc.MUE, i.cc.MUE-alt { color: #f5a10e; }
-i.cc.XAI, i.cc.XAI-alt { color: #2ef99f; }
-i.cc.XBS, i.cc.XBS-alt { color: #d3261d; }
-i.cc.XPM, i.cc.XPM-alt { color: #e5b625; }
-i.cc.BAY, i.cc.BAY-alt { color: #584ba1; }
-i.cc.DGB, i.cc.DGB-alt { color: #0066cc; }
-i.cc.EMC, i.cc.EMC-alt { color: #674c8c; }
-i.cc.ETH, i.cc.ETH-alt { color: #282828; }
-i.cc.MINT, i.cc.MINT-alt { color: #006835; }
-i.cc.MONA, i.cc.MONA-alt { color: #a99364; }
-i.cc.MRC { color: #4279bd; }
-i.cc.NEU, i.cc.NEU-alt { color: #2983c0; }
-i.cc.NVC, i.cc.NVC-alt { color: #ecab41; }
-i.cc.AEON, i.cc.AEON-alt { color: #164450; }
-i.cc.AMP, i.cc.AMP-alt { color: #048DD2; }
-i.cc.ANC, i.cc.ANC-alt { color: #000; }
-i.cc.BTA { color: #210094; }
-i.cc.CLAM, i.cc.CLAM-alt { color: #D6AB31; }
-i.cc.CLOAK, i.cc.CLOAK-alt { color: #DF3F1E; }
-i.cc.DCR, i.cc.DCR-alt { color: #43A2CA; }
-i.cc.NEOS, i.cc.NEOS-alt { color: #3771B1; }
-i.cc.NLG, i.cc.NLG-alt { color: #003E7E; }
-i.cc.OK, i.cc.OK-alt { color: #0165A4; }
-i.cc.OMNI, i.cc.OMNI-alt { color: #18347E; }
-i.cc.RBY, i.cc.RBY-alt { color: #D31F26; }
-i.cc.SCOT, i.cc.SCOT-alt { color: #3498DB; }
-i.cc.SJCX, i.cc.SJCX-alt { color: #003366; }
-i.cc.START, i.cc.START-alt { color: #01AEF0; }
-i.cc.SYS, i.cc.SYS-alt { color: #0098DA; }
-i.cc.VNL, i.cc.VNL-alt { color: #404249; }
-i.cc.TX, i.cc.TX-alt { color: #1F8BCC; }
-i.cc.XVG, i.cc.XVG-alt { color: #42AFB2; }
-i.cc.FCT, i.cc.FCT-alt { color: #2175BB; }
-i.cc.GDC, i.cc.GDC-alt { color: #E9A226; }
-i.cc.JBS, i.cc.JBS-alt { color: #1A8BCD; }
-i.cc.LISK, i.cc.LISK-alt { color: #1A6896; }
-i.cc.PIGGY, i.cc.PIGGY-alt { color: #F27A7A; }
-i.cc.RBIES, i.cc.RBIES-alt { color: #C62436; }
-i.cc.SAR, i.cc.SAR-alt { color: #1B72B8; }
-i.cc.SLG, i.cc.SLG-alt { color: #5A6875; }
-i.cc.USDT, i.cc.USDT-alt { color: #2CA07A; }
-i.cc.ZEIT, i.cc.ZEIT-alt { color: #ACACAC; }
-i.cc.DGD, i.cc.DGX { color: #D8A24A; }
-i.cc.ADC, i.cc.ADC-alt { color: #3CB0E5; }
-i.cc.BSD, i.cc.BSD-alt { color: #1186E7; }
-i.cc.DAO, i.cc.DAO-alt { color: #FF3B3B; }
-i.cc.ERC, i.cc.ERC-alt { color: #101E84; }
-i.cc.ETC, i.cc.ETC-alt { color: #669073; }
-i.cc.GLD, i.cc.GLD-alt { color: #E8BE24; }
-i.cc.GRS { color: #648FA0; }
-i.cc.KOBO { color: #80C342; }
-i.cc.LBC, i.cc.LBC-alt { color: #015C47; }
-i.cc.PINK, i.cc.PINK-alt { color: #ED31CA; }
-i.cc.RDD, i.cc.RDD-alt { color: #ED1C24; }
-i.cc.RISE, i.cc.RISE-alt { color: #43CEA2; }
-i.cc.SIA, i.cc.SIA-alt { color: #00CBA0; }
-i.cc.SLS, i.cc.SLS-alt { color: #1EB549; }
-i.cc.SNRG, i.cc.SNRG-alt { color: #160363; }
-i.cc.STEEM, i.cc.STEEM-alt { color: #1A5099; }
-i.cc.STRAT, i.cc.STRAT-alt { color: #33C7F5; }
-i.cc.SWIFT, i.cc.SWIFT-alt { color: #428BCA; }
+.ADC { fill: #3CB0E5; }
+.AEON { fill: #164450; }
+.AMP { fill: #048DD2; }
+.ANC { fill: #000; }
+.ARCH { fill: #002652; }
+.ARDR { fill: #1162a1; }
+.AUR { fill: #136c5e; }
+.BANX { fill: #225BA6; }
+.BAY { fill: #584ba1; }
+.BC { fill: #202121; }
+.BCN { fill: #964F51; }
+.BFT { fill: #4fc3f7; }
+.BSD { fill: #1186E7; }
+.BTA { fill: #210094; }
+.BTC { fill: #F7931A; }
+.BTCD { fill: #2A72DC; }
+.BTS { fill: #03A9E0; }
+.CLAM { fill: #D6AB31; }
+.CLOAK { fill: #DF3F1E; }
+.DAO { fill: #FF3B3B; }
+.DASH { fill: #1c75bc; }
+.DCR { fill: #3b7cfb; }
+.DGB { fill: #0066cc; }
+.DGD, .DGX { fill: #D8A24A; }
+.DMD { fill: #5497b2; }
+.DOGE { fill: #BA9F33; }
+.EMC { fill: #674c8c; }
+.ERC { fill: #101E84; }
+.ETC { fill: #669073; }
+.ETH { fill: #282828; }
+.FC2 { fill: #040405; }
+.FCT { fill: #2175BB; }
+.FRK { fill: #0633cd; }
+.FTC { fill: #679EF1; }
+.GAME { fill: #ed1b24; }
+.GDC { fill: #E9A226; }
+.GEMZ { fill: #e86060; }
+.GLD { fill: #E8BE24; }
+.GRC { fill: #88A13C; }
+.GRS { fill: #648FA0; }
+.IFC { fill: #ed272d; }
+.IOC { fill: #2fa3de; }
+.JBS { fill: #1A8BCD; }
+.KOBO { fill: #80C342; }
+.KORE { fill: #DF4124; }
+.LBC { fill: #015C47; }
+.LDOGE { fill: #ffcc00; }
+.LISK { fill: #1A6896; }
+.LTC { fill: #838383; }
+.MAID { fill: #5492D6; }
+.MINT { fill: #006835; }
+.MONA { fill: #a99364; }
+.MRC { fill: #4279bd; }
+.MSC { fill: #1D4983; }
+.MTR { fill: #b92429; }
+.MUE { fill: #f5a10e; }
+.NBT { fill: #FFC93D; }
+.NEOS { fill: #1d1d1b; }
+.NEU { fill: #2983c0; }
+.NLG { fill: #003E7E; }
+.NMC { fill: #6787B7; }
+.NOTE { fill: #42daff; }
+.NVC { fill: #ecab41; }
+.NXT { fill: #008FBB; }
+.OK { fill: #0165A4; }
+.OMNI { fill: #18347E; }
+.OPAL { fill: #7193AA; }
+.PIGGY { fill: #F27A7A; }
+.PINK { fill: #ED31CA; }
+.POT { fill: #105B2F; }
+.PPC { fill: #3FA30C; }
+.QRK { fill: #22AABF; }
+.RBIES { fill: #C62436; }
+.RBT { fill: #0d4982; }
+.RBY { fill: #D31F26; }
+.RDD { fill: #ED1C24; }
+.REP { fill: #40a2cb; }
+.RISE { fill: #43CEA2; }
+.SAR { fill: #1B72B8; }
+.SCOT { fill: #3498DB; }
+.SDC { fill: #981D2D; }
+.SIA { fill: #00CBA0; }
+.SJCX { fill: #003366; }
+.SLG { fill: #5A6875; }
+.SLS { fill: #1EB549; }
+.SNRG { fill: #160363; }
+.START { fill: #01AEF0; }
+.STEEM { fill: #1A5099; }
+.STR { fill: #08B5E5; }
+.STRAT { fill: #2398dd; }
+.SWIFT { fill: #428BCA; }
+.SYNC { fill: #008DD2; }
+.SYS { fill: #0098DA; }
+.TX { fill: #1F8BCC; }
+.UNITY { fill: #ED8527; }
+.USDT { fill: #2CA07A; }
+.VIOR { fill: #1F52A4; }
+.VNL { fill: #404249; }
+.VPN { fill: #589700; }
+.VRC { fill: #418bca; }
+.VTC { fill: #1b5c2e; }
+.WAVES { fill: #24aad6; }
+.XAI { fill: #2ef99f; }
+.XBS { fill: #d3261d; }
+.XCP { fill: #EC1550; }
+.XEM { fill: #41bf76; }
+.XMR { fill: #FF6600; }
+.XPM { fill: #e5b625; }
+.XRP { fill: #346AA9; }
+.XVG { fill: #42AFB2; }
+.YBC { fill: #D6C154; }
+.ZEC { fill: #e5a93d; }
+.ZEIT { fill: #ACACAC; }
