updated readme, added coin colors for last batch

--- a/cryptocoins-colors.css
+++ b/cryptocoins-colors.css
@@ -38,9 +38,13 @@
 .GLD { fill: #E8BE24; }
 .GRC { fill: #88A13C; }
 .GRS { fill: #648FA0; }
+.HEAT { fill: #ff5606; }
+.ICN { fill: #4c6f8c; }
 .IFC { fill: #ed272d; }
+.INCNT { fill: #f2932f; }
 .IOC { fill: #2fa3de; }
 .JBS { fill: #1A8BCD; }
+.KMD { fill: #326464; }
 .KOBO { fill: #80C342; }
 .KORE { fill: #DF4124; }
 .LBC { fill: #015C47; }
