added 4 coins, fixed package.json

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -6,6 +6,7 @@
 .ARDR { color: #1162a1; }
 .AUR { color: #136c5e; }
 .BANX { color: #225BA6; }
+.BAT { color: #9e1f63; }
 .BAY { color: #584ba1; }
 .BC { color: #202121; }
 .BCN { color: #964F51; }
@@ -39,6 +40,7 @@
 .GDC { color: #E9A226; }
 .GEMZ { color: #e86060; }
 .GLD { color: #E8BE24; }
+.GNO { color: #00A6C4; }
 .GNT { color: #00d6e3; }
 .GRC { color: #88A13C; }
 .GRS { color: #648FA0; }
@@ -47,6 +49,7 @@
 .IFC { color: #ed272d; }
 .INCNT { color: #f2932f; }
 .IOC { color: #2fa3de; }
+.IOTA { color: #FFFFFF; }
 .JBS { color: #1A8BCD; }
 .KMD { color: #326464; }
 .KOBO { color: #80C342; }
@@ -79,6 +82,7 @@
 .POT { color: #105B2F; }
 .PPC { color: #3FA30C; }
 .QRK { color: #22AABF; }
+.RADS { color: #924cea; }
 .RBIES { color: #C62436; }
 .RBT { color: #0d4982; }
 .RBY { color: #D31F26; }
