--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -88,906 +88,938 @@
   content: "\E010";
 }
 
-.cc-BAY-alt:before {
+.cc-BAT-alt:before {
   content: "\E011";
 }
 
-.cc-BAY:before {
+.cc-BAT:before {
   content: "\E012";
 }
 
-.cc-BC-alt:before {
+.cc-BAY-alt:before {
   content: "\E013";
 }
 
-.cc-BC:before {
+.cc-BAY:before {
   content: "\E014";
 }
 
-.cc-BCN-alt:before {
+.cc-BC-alt:before {
   content: "\E015";
 }
 
-.cc-BCN:before {
+.cc-BC:before {
   content: "\E016";
 }
 
-.cc-BFT-alt:before {
+.cc-BCN-alt:before {
   content: "\E017";
 }
 
-.cc-BFT:before {
+.cc-BCN:before {
   content: "\E018";
 }
 
-.cc-BRK-alt:before {
+.cc-BFT-alt:before {
   content: "\E019";
 }
 
-.cc-BRK:before {
+.cc-BFT:before {
   content: "\E01A";
 }
 
-.cc-BRX-alt:before {
+.cc-BRK-alt:before {
   content: "\E01B";
 }
 
-.cc-BRX:before {
+.cc-BRK:before {
   content: "\E01C";
 }
 
-.cc-BSD-alt:before {
+.cc-BRX-alt:before {
   content: "\E01D";
 }
 
-.cc-BSD:before {
+.cc-BRX:before {
   content: "\E01E";
 }
 
-.cc-BTA:before {
+.cc-BSD-alt:before {
   content: "\E01F";
 }
 
-.cc-BTC-alt:before {
+.cc-BSD:before {
   content: "\E020";
 }
 
-.cc-BTC:before {
+.cc-BTA:before {
   content: "\E021";
 }
 
-.cc-BTCD-alt:before {
+.cc-BTC-alt:before {
   content: "\E022";
 }
 
-.cc-BTCD:before {
+.cc-BTC:before {
   content: "\E023";
 }
 
-.cc-BTS-alt:before {
+.cc-BTCD-alt:before {
   content: "\E024";
 }
 
-.cc-BTS:before {
+.cc-BTCD:before {
   content: "\E025";
 }
 
-.cc-CLAM-alt:before {
+.cc-BTS-alt:before {
   content: "\E026";
 }
 
-.cc-CLAM:before {
+.cc-BTS:before {
   content: "\E027";
 }
 
-.cc-CLOAK-alt:before {
+.cc-CLAM-alt:before {
   content: "\E028";
 }
 
-.cc-CLOAK:before {
+.cc-CLAM:before {
   content: "\E029";
 }
 
-.cc-DAO-alt:before {
+.cc-CLOAK-alt:before {
   content: "\E02A";
 }
 
-.cc-DAO:before {
+.cc-CLOAK:before {
   content: "\E02B";
 }
 
-.cc-DASH-alt:before {
+.cc-DAO-alt:before {
   content: "\E02C";
 }
 
-.cc-DASH:before {
+.cc-DAO:before {
   content: "\E02D";
 }
 
-.cc-DCR-alt:before {
+.cc-DASH-alt:before {
   content: "\E02E";
 }
 
-.cc-DCR:before {
+.cc-DASH:before {
   content: "\E02F";
 }
 
-.cc-DGB-alt:before {
+.cc-DCR-alt:before {
   content: "\E030";
 }
 
-.cc-DGB:before {
+.cc-DCR:before {
   content: "\E031";
 }
 
-.cc-DGD:before {
+.cc-DGB-alt:before {
   content: "\E032";
 }
 
-.cc-DGX:before {
+.cc-DGB:before {
   content: "\E033";
 }
 
-.cc-DMD-alt:before {
+.cc-DGD:before {
   content: "\E034";
 }
 
-.cc-DMD:before {
+.cc-DGX:before {
   content: "\E035";
 }
 
-.cc-DOGE-alt:before {
+.cc-DMD-alt:before {
   content: "\E036";
 }
 
-.cc-DOGE:before {
+.cc-DMD:before {
   content: "\E037";
 }
 
-.cc-EMC-alt:before {
+.cc-DOGE-alt:before {
   content: "\E038";
 }
 
-.cc-EMC:before {
+.cc-DOGE:before {
   content: "\E039";
 }
 
-.cc-ERC-alt:before {
+.cc-EMC-alt:before {
   content: "\E03A";
 }
 
-.cc-ERC:before {
+.cc-EMC:before {
   content: "\E03B";
 }
 
-.cc-ETC-alt:before {
+.cc-ERC-alt:before {
   content: "\E03C";
 }
 
-.cc-ETC:before {
+.cc-ERC:before {
   content: "\E03D";
 }
 
-.cc-ETH-alt:before {
+.cc-ETC-alt:before {
   content: "\E03E";
 }
 
-.cc-ETH:before {
+.cc-ETC:before {
   content: "\E03F";
 }
 
-.cc-FC2-alt:before {
+.cc-ETH-alt:before {
   content: "\E040";
 }
 
-.cc-FC2:before {
+.cc-ETH:before {
   content: "\E041";
 }
 
-.cc-FCT-alt:before {
+.cc-FC2-alt:before {
   content: "\E042";
 }
 
-.cc-FCT:before {
+.cc-FC2:before {
   content: "\E043";
 }
 
-.cc-FLO-alt:before {
+.cc-FCT-alt:before {
   content: "\E044";
 }
 
-.cc-FLO:before {
+.cc-FCT:before {
   content: "\E045";
 }
 
-.cc-FRK-alt:before {
+.cc-FLO-alt:before {
   content: "\E046";
 }
 
-.cc-FRK:before {
+.cc-FLO:before {
   content: "\E047";
 }
 
-.cc-FTC-alt:before {
+.cc-FRK-alt:before {
   content: "\E048";
 }
 
-.cc-FTC:before {
+.cc-FRK:before {
   content: "\E049";
 }
 
-.cc-GAME-alt:before {
+.cc-FTC-alt:before {
   content: "\E04A";
 }
 
-.cc-GAME:before {
+.cc-FTC:before {
   content: "\E04B";
 }
 
-.cc-GDC-alt:before {
+.cc-GAME-alt:before {
   content: "\E04C";
 }
 
-.cc-GDC:before {
+.cc-GAME:before {
   content: "\E04D";
 }
 
-.cc-GEMZ-alt:before {
+.cc-GDC-alt:before {
   content: "\E04E";
 }
 
-.cc-GEMZ:before {
+.cc-GDC:before {
   content: "\E04F";
 }
 
-.cc-GLD-alt:before {
+.cc-GEMZ-alt:before {
   content: "\E050";
 }
 
-.cc-GLD:before {
+.cc-GEMZ:before {
   content: "\E051";
 }
 
-.cc-GNT-alt:before {
+.cc-GLD-alt:before {
   content: "\E052";
 }
 
-.cc-GNT:before {
+.cc-GLD:before {
   content: "\E053";
 }
 
-.cc-GRC-alt:before {
+.cc-GNO-alt:before {
   content: "\E054";
 }
 
-.cc-GRC:before {
+.cc-GNO:before {
   content: "\E055";
 }
 
-.cc-GRS:before {
+.cc-GNT-alt:before {
   content: "\E056";
 }
 
-.cc-HEAT-alt:before {
+.cc-GNT:before {
   content: "\E057";
 }
 
-.cc-HEAT:before {
+.cc-GRC-alt:before {
   content: "\E058";
 }
 
-.cc-ICN-alt:before {
+.cc-GRC:before {
   content: "\E059";
 }
 
-.cc-ICN:before {
+.cc-GRS:before {
   content: "\E05A";
 }
 
-.cc-IFC-alt:before {
+.cc-HEAT-alt:before {
   content: "\E05B";
 }
 
-.cc-IFC:before {
+.cc-HEAT:before {
   content: "\E05C";
 }
 
-.cc-INCNT-alt:before {
+.cc-ICN-alt:before {
   content: "\E05D";
 }
 
-.cc-INCNT:before {
+.cc-ICN:before {
   content: "\E05E";
 }
 
-.cc-IOC-alt:before {
+.cc-IFC-alt:before {
   content: "\E05F";
 }
 
-.cc-IOC:before {
+.cc-IFC:before {
   content: "\E060";
 }
 
-.cc-JBS-alt:before {
+.cc-INCNT-alt:before {
   content: "\E061";
 }
 
-.cc-JBS:before {
+.cc-INCNT:before {
   content: "\E062";
 }
 
-.cc-KMD-alt:before {
+.cc-IOC-alt:before {
   content: "\E063";
 }
 
-.cc-KMD:before {
+.cc-IOC:before {
   content: "\E064";
 }
 
-.cc-KOBO:before {
+.cc-IOTA-alt:before {
   content: "\E065";
 }
 
-.cc-KORE-alt:before {
+.cc-IOTA:before {
   content: "\E066";
 }
 
-.cc-KORE:before {
+.cc-JBS-alt:before {
   content: "\E067";
 }
 
-.cc-LBC-alt:before {
+.cc-JBS:before {
   content: "\E068";
 }
 
-.cc-LBC:before {
+.cc-KMD-alt:before {
   content: "\E069";
 }
 
-.cc-LDOGE-alt:before {
+.cc-KMD:before {
   content: "\E06A";
 }
 
-.cc-LDOGE:before {
+.cc-KOBO:before {
   content: "\E06B";
 }
 
-.cc-LISK-alt:before {
+.cc-KORE-alt:before {
   content: "\E06C";
 }
 
-.cc-LISK:before {
+.cc-KORE:before {
   content: "\E06D";
 }
 
-.cc-LTC-alt:before {
+.cc-LBC-alt:before {
   content: "\E06E";
 }
 
-.cc-LTC:before {
+.cc-LBC:before {
   content: "\E06F";
 }
 
-.cc-MAID-alt:before {
+.cc-LDOGE-alt:before {
   content: "\E070";
 }
 
-.cc-MAID:before {
+.cc-LDOGE:before {
   content: "\E071";
 }
 
-.cc-MINT-alt:before {
+.cc-LISK-alt:before {
   content: "\E072";
 }
 
-.cc-MINT:before {
+.cc-LISK:before {
   content: "\E073";
 }
 
-.cc-MONA-alt:before {
+.cc-LTC-alt:before {
   content: "\E074";
 }
 
-.cc-MONA:before {
+.cc-LTC:before {
   content: "\E075";
 }
 
-.cc-MRC:before {
+.cc-MAID-alt:before {
   content: "\E076";
 }
 
-.cc-MSC-alt:before {
+.cc-MAID:before {
   content: "\E077";
 }
 
-.cc-MSC:before {
+.cc-MINT-alt:before {
   content: "\E078";
 }
 
-.cc-MTR-alt:before {
+.cc-MINT:before {
   content: "\E079";
 }
 
-.cc-MTR:before {
+.cc-MONA-alt:before {
   content: "\E07A";
 }
 
-.cc-MUE-alt:before {
+.cc-MONA:before {
   content: "\E07B";
 }
 
-.cc-MUE:before {
+.cc-MRC:before {
   content: "\E07C";
 }
 
-.cc-NBT:before {
+.cc-MSC-alt:before {
   content: "\E07D";
 }
 
-.cc-NEOS-alt:before {
+.cc-MSC:before {
   content: "\E07E";
 }
 
-.cc-NEOS:before {
+.cc-MTR-alt:before {
   content: "\E07F";
 }
 
-.cc-NEU-alt:before {
+.cc-MTR:before {
   content: "\E080";
 }
 
-.cc-NEU:before {
+.cc-MUE-alt:before {
   content: "\E081";
 }
 
-.cc-NLG-alt:before {
+.cc-MUE:before {
   content: "\E082";
 }
 
-.cc-NLG:before {
+.cc-NBT:before {
   content: "\E083";
 }
 
-.cc-NMC-alt:before {
+.cc-NEOS-alt:before {
   content: "\E084";
 }
 
-.cc-NMC:before {
+.cc-NEOS:before {
   content: "\E085";
 }
 
-.cc-NOTE-alt:before {
+.cc-NEU-alt:before {
   content: "\E086";
 }
 
-.cc-NOTE:before {
+.cc-NEU:before {
   content: "\E087";
 }
 
-.cc-NVC-alt:before {
+.cc-NLG-alt:before {
   content: "\E088";
 }
 
-.cc-NVC:before {
+.cc-NLG:before {
   content: "\E089";
 }
 
-.cc-NXT-alt:before {
+.cc-NMC-alt:before {
   content: "\E08A";
 }
 
-.cc-NXT:before {
+.cc-NMC:before {
   content: "\E08B";
 }
 
-.cc-OK-alt:before {
+.cc-NOTE-alt:before {
   content: "\E08C";
 }
 
-.cc-OK:before {
+.cc-NOTE:before {
   content: "\E08D";
 }
 
-.cc-OMNI-alt:before {
+.cc-NVC-alt:before {
   content: "\E08E";
 }
 
-.cc-OMNI:before {
+.cc-NVC:before {
   content: "\E08F";
 }
 
-.cc-OPAL-alt:before {
+.cc-NXT-alt:before {
   content: "\E090";
 }
 
-.cc-OPAL:before {
+.cc-NXT:before {
   content: "\E091";
 }
 
-.cc-PIGGY-alt:before {
+.cc-OK-alt:before {
   content: "\E092";
 }
 
-.cc-PIGGY:before {
+.cc-OK:before {
   content: "\E093";
 }
 
-.cc-PINK-alt:before {
+.cc-OMNI-alt:before {
   content: "\E094";
 }
 
-.cc-PINK:before {
+.cc-OMNI:before {
   content: "\E095";
 }
 
-.cc-PIVX-alt:before {
+.cc-OPAL-alt:before {
   content: "\E096";
 }
 
-.cc-PIVX:before {
+.cc-OPAL:before {
   content: "\E097";
 }
 
-.cc-POT-alt:before {
+.cc-PIGGY-alt:before {
   content: "\E098";
 }
 
-.cc-POT:before {
+.cc-PIGGY:before {
   content: "\E099";
 }
 
-.cc-PPC-alt:before {
+.cc-PINK-alt:before {
   content: "\E09A";
 }
 
-.cc-PPC:before {
+.cc-PINK:before {
   content: "\E09B";
 }
 
-.cc-QRK-alt:before {
+.cc-PIVX-alt:before {
   content: "\E09C";
 }
 
-.cc-QRK:before {
+.cc-PIVX:before {
   content: "\E09D";
 }
 
-.cc-RBIES-alt:before {
+.cc-POT-alt:before {
   content: "\E09E";
 }
 
-.cc-RBIES:before {
+.cc-POT:before {
   content: "\E09F";
 }
 
-.cc-RBT-alt:before {
+.cc-PPC-alt:before {
   content: "\E0A0";
 }
 
-.cc-RBT:before {
+.cc-PPC:before {
   content: "\E0A1";
 }
 
-.cc-RBY-alt:before {
+.cc-QRK-alt:before {
   content: "\E0A2";
 }
 
-.cc-RBY:before {
+.cc-QRK:before {
   content: "\E0A3";
 }
 
-.cc-RDD-alt:before {
+.cc-RADS-alt:before {
   content: "\E0A4";
 }
 
-.cc-RDD:before {
+.cc-RADS:before {
   content: "\E0A5";
 }
 
-.cc-REP-alt:before {
+.cc-RBIES-alt:before {
   content: "\E0A6";
 }
 
-.cc-REP:before {
+.cc-RBIES:before {
   content: "\E0A7";
 }
 
-.cc-RISE-alt:before {
+.cc-RBT-alt:before {
   content: "\E0A8";
 }
 
-.cc-RISE:before {
+.cc-RBT:before {
   content: "\E0A9";
 }
 
-.cc-SAR-alt:before {
+.cc-RBY-alt:before {
   content: "\E0AA";
 }
 
-.cc-SAR:before {
+.cc-RBY:before {
   content: "\E0AB";
 }
 
-.cc-SCOT-alt:before {
+.cc-RDD-alt:before {
   content: "\E0AC";
 }
 
-.cc-SCOT:before {
+.cc-RDD:before {
   content: "\E0AD";
 }
 
-.cc-SDC-alt:before {
+.cc-REP-alt:before {
   content: "\E0AE";
 }
 
-.cc-SDC:before {
+.cc-REP:before {
   content: "\E0AF";
 }
 
-.cc-SIA-alt:before {
+.cc-RISE-alt:before {
   content: "\E0B0";
 }
 
-.cc-SIA:before {
+.cc-RISE:before {
   content: "\E0B1";
 }
 
-.cc-SJCX-alt:before {
+.cc-SAR-alt:before {
   content: "\E0B2";
 }
 
-.cc-SJCX:before {
+.cc-SAR:before {
   content: "\E0B3";
 }
 
-.cc-SLG-alt:before {
+.cc-SCOT-alt:before {
   content: "\E0B4";
 }
 
-.cc-SLG:before {
+.cc-SCOT:before {
   content: "\E0B5";
 }
 
-.cc-SLS-alt:before {
+.cc-SDC-alt:before {
   content: "\E0B6";
 }
 
-.cc-SLS:before {
+.cc-SDC:before {
   content: "\E0B7";
 }
 
-.cc-SNRG-alt:before {
+.cc-SIA-alt:before {
   content: "\E0B8";
 }
 
-.cc-SNRG:before {
+.cc-SIA:before {
   content: "\E0B9";
 }
 
-.cc-START-alt:before {
+.cc-SJCX-alt:before {
   content: "\E0BA";
 }
 
-.cc-START:before {
+.cc-SJCX:before {
   content: "\E0BB";
 }
 
-.cc-STEEM-alt:before {
+.cc-SLG-alt:before {
   content: "\E0BC";
 }
 
-.cc-STEEM:before {
+.cc-SLG:before {
   content: "\E0BD";
 }
 
-.cc-STR-alt:before {
+.cc-SLS-alt:before {
   content: "\E0BE";
 }
 
-.cc-STR:before {
+.cc-SLS:before {
   content: "\E0BF";
 }
 
-.cc-STRAT-alt:before {
+.cc-SNRG-alt:before {
   content: "\E0C0";
 }
 
-.cc-STRAT:before {
+.cc-SNRG:before {
   content: "\E0C1";
 }
 
-.cc-SWIFT-alt:before {
+.cc-START-alt:before {
   content: "\E0C2";
 }
 
-.cc-SWIFT:before {
+.cc-START:before {
   content: "\E0C3";
 }
 
-.cc-SYNC-alt:before {
+.cc-STEEM-alt:before {
   content: "\E0C4";
 }
 
-.cc-SYNC:before {
+.cc-STEEM:before {
   content: "\E0C5";
 }
 
-.cc-SYS-alt:before {
+.cc-STR-alt:before {
   content: "\E0C6";
 }
 
-.cc-SYS:before {
+.cc-STR:before {
   content: "\E0C7";
 }
 
-.cc-TRIG-alt:before {
+.cc-STRAT-alt:before {
   content: "\E0C8";
 }
 
-.cc-TRIG:before {
+.cc-STRAT:before {
   content: "\E0C9";
 }
 
-.cc-TX-alt:before {
+.cc-SWIFT-alt:before {
   content: "\E0CA";
 }
 
-.cc-TX:before {
+.cc-SWIFT:before {
   content: "\E0CB";
 }
 
-.cc-UBQ-alt:before {
+.cc-SYNC-alt:before {
   content: "\E0CC";
 }
 
-.cc-UBQ:before {
+.cc-SYNC:before {
   content: "\E0CD";
 }
 
-.cc-UNITY-alt:before {
+.cc-SYS-alt:before {
   content: "\E0CE";
 }
 
-.cc-UNITY:before {
+.cc-SYS:before {
   content: "\E0CF";
 }
 
-.cc-USDT-alt:before {
+.cc-TRIG-alt:before {
   content: "\E0D0";
 }
 
-.cc-USDT:before {
+.cc-TRIG:before {
   content: "\E0D1";
 }
 
-.cc-VIOR-alt:before {
+.cc-TX-alt:before {
   content: "\E0D2";
 }
 
-.cc-VIOR:before {
+.cc-TX:before {
   content: "\E0D3";
 }
 
-.cc-VNL-alt:before {
+.cc-UBQ-alt:before {
   content: "\E0D4";
 }
 
-.cc-VNL:before {
+.cc-UBQ:before {
   content: "\E0D5";
 }
 
-.cc-VPN-alt:before {
+.cc-UNITY-alt:before {
   content: "\E0D6";
 }
 
-.cc-VPN:before {
+.cc-UNITY:before {
   content: "\E0D7";
 }
 
-.cc-VRC-alt:before {
+.cc-USDT-alt:before {
   content: "\E0D8";
 }
 
-.cc-VRC:before {
+.cc-USDT:before {
   content: "\E0D9";
 }
 
-.cc-VTC-alt:before {
+.cc-VIOR-alt:before {
   content: "\E0DA";
 }
 
-.cc-VTC:before {
+.cc-VIOR:before {
   content: "\E0DB";
 }
 
-.cc-WAVES-alt:before {
+.cc-VNL-alt:before {
   content: "\E0DC";
 }
 
-.cc-WAVES:before {
+.cc-VNL:before {
   content: "\E0DD";
 }
 
-.cc-XAI-alt:before {
+.cc-VPN-alt:before {
   content: "\E0DE";
 }
 
-.cc-XAI:before {
+.cc-VPN:before {
   content: "\E0DF";
 }
 
-.cc-XBS-alt:before {
+.cc-VRC-alt:before {
   content: "\E0E0";
 }
 
-.cc-XBS:before {
+.cc-VRC:before {
   content: "\E0E1";
 }
 
-.cc-XCP-alt:before {
+.cc-VTC-alt:before {
   content: "\E0E2";
 }
 
-.cc-XCP:before {
+.cc-VTC:before {
   content: "\E0E3";
 }
 
-.cc-XEM-alt:before {
+.cc-WAVES-alt:before {
   content: "\E0E4";
 }
 
-.cc-XEM:before {
+.cc-WAVES:before {
   content: "\E0E5";
 }
 
-.cc-XMR:before {
+.cc-XAI-alt:before {
   content: "\E0E6";
 }
 
-.cc-XPM-alt:before {
+.cc-XAI:before {
   content: "\E0E7";
 }
 
-.cc-XPM:before {
+.cc-XBS-alt:before {
   content: "\E0E8";
 }
 
-.cc-XRP-alt:before {
+.cc-XBS:before {
   content: "\E0E9";
 }
 
-.cc-XRP:before {
+.cc-XCP-alt:before {
   content: "\E0EA";
 }
 
-.cc-XVG-alt:before {
+.cc-XCP:before {
   content: "\E0EB";
 }
 
-.cc-XVG:before {
+.cc-XEM-alt:before {
   content: "\E0EC";
 }
 
-.cc-YBC-alt:before {
+.cc-XEM:before {
   content: "\E0ED";
 }
 
-.cc-YBC:before {
+.cc-XMR:before {
   content: "\E0EE";
 }
 
-.cc-ZEC-alt:before {
+.cc-XPM-alt:before {
   content: "\E0EF";
 }
 
-.cc-ZEC:before {
+.cc-XPM:before {
   content: "\E0F0";
 }
 
-.cc-ZEIT-alt:before {
+.cc-XRP-alt:before {
   content: "\E0F1";
 }
 
-.cc-ZEIT:before {
+.cc-XRP:before {
   content: "\E0F2";
+}
+
+.cc-XVG-alt:before {
+  content: "\E0F3";
+}
+
+.cc-XVG:before {
+  content: "\E0F4";
+}
+
+.cc-YBC-alt:before {
+  content: "\E0F5";
+}
+
+.cc-YBC:before {
+  content: "\E0F6";
+}
+
+.cc-ZEC-alt:before {
+  content: "\E0F7";
+}
+
+.cc-ZEC:before {
+  content: "\E0F8";
+}
+
+.cc-ZEIT-alt:before {
+  content: "\E0F9";
+}
+
+.cc-ZEIT:before {
+  content: "\E0FA";
 }
