FIX: Remove references to non-existing fonts

--- a/src/icons-template.css
+++ b/src/icons-template.css
@@ -4,10 +4,8 @@
   font-family: "<%= fontName %>";
   src: url('<%= fontPath %><%= fontName %>.eot');
   src: url('<%= fontPath %><%= fontName %>.eot?#iefix') format('eot'),
-    url('<%= fontPath %><%= fontName %>.woff2') format('woff2'),
     url('<%= fontPath %><%= fontName %>.woff') format('woff'),
-    url('<%= fontPath %><%= fontName %>.ttf') format('truetype'),
-    url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>') format('svg');
+    url('<%= fontPath %><%= fontName %>.ttf') format('truetype');
 }
 
 /* .<%= cssClass %>:before { */
