fixed webfont generator and CSS

--- a/src/icons-template.css
+++ b/src/icons-template.css
@@ -2,16 +2,13 @@
 
 @font-face {
   font-family: "<%= fontName %>";
-  src: url('<%= fontPath %><%= fontName %>.eot');
-  src: url('<%= fontPath %><%= fontName %>.eot?#iefix') format('eot'),
-    url('<%= fontPath %><%= fontName %>.woff2') format('woff2'),
+  src: url('<%= fontPath %><%= fontName %>.woff2') format('woff2'),
     url('<%= fontPath %><%= fontName %>.woff') format('woff'),
     url('<%= fontPath %><%= fontName %>.ttf') format('truetype'),
-    url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>') format('svg');
 }
 
 /* .<%= cssClass %>:before { */
-[class*="cc-"]::before {
+.cc::before {
   font-family: "<%= fontName %>";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -24,7 +21,7 @@
 }
 
 <% _.each(glyphs, function(glyph) { %>
-.<%= cssClass %>-<%= glyph.fileName %>:before {
+.<%= cssClass %>.<%= glyph.fileName %>:before {
   content: "\<%= glyph.codePoint %>";
 }
 <% }); %>
