--- a/webfont/cryptocoins.css
+++ b/webfont/cryptocoins.css
@@ -2,16 +2,13 @@
 
 @font-face {
   font-family: "cryptocoins-icons";
-  src: url('./cryptocoins-icons.eot');
-  src: url('./cryptocoins-icons.eot?#iefix') format('eot'),
-    url('./cryptocoins-icons.woff2') format('woff2'),
+  src: url('./cryptocoins-icons.woff2') format('woff2'),
     url('./cryptocoins-icons.woff') format('woff'),
     url('./cryptocoins-icons.ttf') format('truetype'),
-    url('./cryptocoins-icons.svg#cryptocoins-icons') format('svg');
 }
 
 /* .cc:before { */
-[class*="cc-"]::before {
+.cc::before {
   font-family: "cryptocoins-icons";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -24,1002 +21,1002 @@
 }
 
 
-.cc-ADC-alt:before {
+.cc.ADC-alt:before {
   content: "\E001";
 }
 
-.cc-ADC:before {
+.cc.ADC:before {
   content: "\E002";
 }
 
-.cc-AEON-alt:before {
+.cc.AEON-alt:before {
   content: "\E003";
 }
 
-.cc-AEON:before {
+.cc.AEON:before {
   content: "\E004";
 }
 
-.cc-AMP-alt:before {
+.cc.AMP-alt:before {
   content: "\E005";
 }
 
-.cc-AMP:before {
+.cc.AMP:before {
   content: "\E006";
 }
 
-.cc-ANC-alt:before {
+.cc.ANC-alt:before {
   content: "\E007";
 }
 
-.cc-ANC:before {
+.cc.ANC:before {
   content: "\E008";
 }
 
-.cc-ARCH-alt:before {
+.cc.ARCH-alt:before {
   content: "\E009";
 }
 
-.cc-ARCH:before {
+.cc.ARCH:before {
   content: "\E00A";
 }
 
-.cc-ARDR-alt:before {
+.cc.ARDR-alt:before {
   content: "\E00B";
 }
 
-.cc-ARDR:before {
+.cc.ARDR:before {
   content: "\E00C";
 }
 
-.cc-AUR-alt:before {
+.cc.AUR-alt:before {
   content: "\E00D";
 }
 
-.cc-AUR:before {
+.cc.AUR:before {
   content: "\E00E";
 }
 
-.cc-BANX-alt:before {
+.cc.BANX-alt:before {
   content: "\E00F";
 }
 
-.cc-BANX:before {
+.cc.BANX:before {
   content: "\E010";
 }
 
-.cc-BAT-alt:before {
+.cc.BAT-alt:before {
   content: "\E011";
 }
 
-.cc-BAT:before {
+.cc.BAT:before {
   content: "\E012";
 }
 
-.cc-BAY-alt:before {
+.cc.BAY-alt:before {
   content: "\E013";
 }
 
-.cc-BAY:before {
+.cc.BAY:before {
   content: "\E014";
 }
 
-.cc-BC-alt:before {
+.cc.BC-alt:before {
   content: "\E015";
 }
 
-.cc-BC:before {
+.cc.BC:before {
   content: "\E016";
 }
 
-.cc-BCN-alt:before {
+.cc.BCN-alt:before {
   content: "\E017";
 }
 
-.cc-BCN:before {
+.cc.BCN:before {
   content: "\E018";
 }
 
-.cc-BFT-alt:before {
+.cc.BFT-alt:before {
   content: "\E019";
 }
 
-.cc-BFT:before {
+.cc.BFT:before {
   content: "\E01A";
 }
 
-.cc-BRK-alt:before {
+.cc.BRK-alt:before {
   content: "\E01B";
 }
 
-.cc-BRK:before {
+.cc.BRK:before {
   content: "\E01C";
 }
 
-.cc-BRX-alt:before {
+.cc.BRX-alt:before {
   content: "\E01D";
 }
 
-.cc-BRX:before {
+.cc.BRX:before {
   content: "\E01E";
 }
 
-.cc-BSD-alt:before {
+.cc.BSD-alt:before {
   content: "\E01F";
 }
 
-.cc-BSD:before {
+.cc.BSD:before {
   content: "\E020";
 }
 
-.cc-BTA:before {
+.cc.BTA:before {
   content: "\E021";
 }
 
-.cc-BTC-alt:before {
+.cc.BTC-alt:before {
   content: "\E022";
 }
 
-.cc-BTC:before {
+.cc.BTC:before {
   content: "\E023";
 }
 
-.cc-BTCD-alt:before {
+.cc.BTCD-alt:before {
   content: "\E024";
 }
 
-.cc-BTCD:before {
+.cc.BTCD:before {
   content: "\E025";
 }
 
-.cc-BTS-alt:before {
+.cc.BTS-alt:before {
   content: "\E026";
 }
 
-.cc-BTS:before {
+.cc.BTS:before {
   content: "\E027";
 }
 
-.cc-CLAM-alt:before {
+.cc.CLAM-alt:before {
   content: "\E028";
 }
 
-.cc-CLAM:before {
+.cc.CLAM:before {
   content: "\E029";
 }
 
-.cc-CLOAK-alt:before {
+.cc.CLOAK-alt:before {
   content: "\E02A";
 }
 
-.cc-CLOAK:before {
+.cc.CLOAK:before {
   content: "\E02B";
 }
 
-.cc-DAO-alt:before {
+.cc.DAO-alt:before {
   content: "\E02C";
 }
 
-.cc-DAO:before {
+.cc.DAO:before {
   content: "\E02D";
 }
 
-.cc-DASH-alt:before {
+.cc.DASH-alt:before {
   content: "\E02E";
 }
 
-.cc-DASH:before {
+.cc.DASH:before {
   content: "\E02F";
 }
 
-.cc-DCR-alt:before {
+.cc.DCR-alt:before {
   content: "\E030";
 }
 
-.cc-DCR:before {
+.cc.DCR:before {
   content: "\E031";
 }
 
-.cc-DGB-alt:before {
+.cc.DGB-alt:before {
   content: "\E032";
 }
 
-.cc-DGB:before {
+.cc.DGB:before {
   content: "\E033";
 }
 
-.cc-DGD:before {
+.cc.DGD:before {
   content: "\E034";
 }
 
-.cc-DGX:before {
+.cc.DGX:before {
   content: "\E035";
 }
 
-.cc-DMD-alt:before {
+.cc.DMD-alt:before {
   content: "\E036";
 }
 
-.cc-DMD:before {
+.cc.DMD:before {
   content: "\E037";
 }
 
-.cc-DOGE-alt:before {
+.cc.DOGE-alt:before {
   content: "\E038";
 }
 
-.cc-DOGE:before {
+.cc.DOGE:before {
   content: "\E039";
 }
 
-.cc-EMC-alt:before {
+.cc.EMC-alt:before {
   content: "\E03A";
 }
 
-.cc-EMC:before {
+.cc.EMC:before {
   content: "\E03B";
 }
 
-.cc-ERC-alt:before {
+.cc.ERC-alt:before {
   content: "\E03C";
 }
 
-.cc-ERC:before {
+.cc.ERC:before {
   content: "\E03D";
 }
 
-.cc-ETC-alt:before {
+.cc.ETC-alt:before {
   content: "\E03E";
 }
 
-.cc-ETC:before {
+.cc.ETC:before {
   content: "\E03F";
 }
 
-.cc-ETH-alt:before {
+.cc.ETH-alt:before {
   content: "\E040";
 }
 
-.cc-ETH:before {
+.cc.ETH:before {
   content: "\E041";
 }
 
-.cc-FC2-alt:before {
+.cc.FC2-alt:before {
   content: "\E042";
 }
 
-.cc-FC2:before {
+.cc.FC2:before {
   content: "\E043";
 }
 
-.cc-FCT-alt:before {
+.cc.FCT-alt:before {
   content: "\E044";
 }
 
-.cc-FCT:before {
+.cc.FCT:before {
   content: "\E045";
 }
 
-.cc-FLO-alt:before {
+.cc.FLO-alt:before {
   content: "\E046";
 }
 
-.cc-FLO:before {
+.cc.FLO:before {
   content: "\E047";
 }
 
-.cc-FRK-alt:before {
+.cc.FRK-alt:before {
   content: "\E048";
 }
 
-.cc-FRK:before {
+.cc.FRK:before {
   content: "\E049";
 }
 
-.cc-FTC-alt:before {
+.cc.FTC-alt:before {
   content: "\E04A";
 }
 
-.cc-FTC:before {
+.cc.FTC:before {
   content: "\E04B";
 }
 
-.cc-GAME-alt:before {
+.cc.GAME-alt:before {
   content: "\E04C";
 }
 
-.cc-GAME:before {
+.cc.GAME:before {
   content: "\E04D";
 }
 
-.cc-GDC-alt:before {
+.cc.GDC-alt:before {
   content: "\E04E";
 }
 
-.cc-GDC:before {
+.cc.GDC:before {
   content: "\E04F";
 }
 
-.cc-GEMZ-alt:before {
+.cc.GEMZ-alt:before {
   content: "\E050";
 }
 
-.cc-GEMZ:before {
+.cc.GEMZ:before {
   content: "\E051";
 }
 
-.cc-GLD-alt:before {
+.cc.GLD-alt:before {
   content: "\E052";
 }
 
-.cc-GLD:before {
+.cc.GLD:before {
   content: "\E053";
 }
 
-.cc-GNO-alt:before {
+.cc.GNO-alt:before {
   content: "\E054";
 }
 
-.cc-GNO:before {
+.cc.GNO:before {
   content: "\E055";
 }
 
-.cc-GNT-alt:before {
+.cc.GNT-alt:before {
   content: "\E056";
 }
 
-.cc-GNT:before {
+.cc.GNT:before {
   content: "\E057";
 }
 
-.cc-GRC-alt:before {
+.cc.GRC-alt:before {
   content: "\E058";
 }
 
-.cc-GRC:before {
+.cc.GRC:before {
   content: "\E059";
 }
 
-.cc-GRS:before {
+.cc.GRS:before {
   content: "\E05A";
 }
 
-.cc-HEAT-alt:before {
+.cc.HEAT-alt:before {
   content: "\E05B";
 }
 
-.cc-HEAT:before {
+.cc.HEAT:before {
   content: "\E05C";
 }
 
-.cc-ICN-alt:before {
+.cc.ICN-alt:before {
   content: "\E05D";
 }
 
-.cc-ICN:before {
+.cc.ICN:before {
   content: "\E05E";
 }
 
-.cc-IFC-alt:before {
+.cc.IFC-alt:before {
   content: "\E05F";
 }
 
-.cc-IFC:before {
+.cc.IFC:before {
   content: "\E060";
 }
 
-.cc-INCNT-alt:before {
+.cc.INCNT-alt:before {
   content: "\E061";
 }
 
-.cc-INCNT:before {
+.cc.INCNT:before {
   content: "\E062";
 }
 
-.cc-IOC-alt:before {
+.cc.IOC-alt:before {
   content: "\E063";
 }
 
-.cc-IOC:before {
+.cc.IOC:before {
   content: "\E064";
 }
 
-.cc-IOTA-alt:before {
+.cc.IOTA-alt:before {
   content: "\E065";
 }
 
-.cc-IOTA:before {
+.cc.IOTA:before {
   content: "\E066";
 }
 
-.cc-JBS-alt:before {
+.cc.JBS-alt:before {
   content: "\E067";
 }
 
-.cc-JBS:before {
+.cc.JBS:before {
   content: "\E068";
 }
 
-.cc-KMD-alt:before {
+.cc.KMD-alt:before {
   content: "\E069";
 }
 
-.cc-KMD:before {
+.cc.KMD:before {
   content: "\E06A";
 }
 
-.cc-KOBO:before {
+.cc.KOBO:before {
   content: "\E06B";
 }
 
-.cc-KORE-alt:before {
+.cc.KORE-alt:before {
   content: "\E06C";
 }
 
-.cc-KORE:before {
+.cc.KORE:before {
   content: "\E06D";
 }
 
-.cc-LBC-alt:before {
+.cc.LBC-alt:before {
   content: "\E06E";
 }
 
-.cc-LBC:before {
+.cc.LBC:before {
   content: "\E06F";
 }
 
-.cc-LDOGE-alt:before {
+.cc.LDOGE-alt:before {
   content: "\E070";
 }
 
-.cc-LDOGE:before {
+.cc.LDOGE:before {
   content: "\E071";
 }
 
-.cc-LISK-alt:before {
+.cc.LISK-alt:before {
   content: "\E072";
 }
 
-.cc-LISK:before {
+.cc.LISK:before {
   content: "\E073";
 }
 
-.cc-LTC-alt:before {
+.cc.LTC-alt:before {
   content: "\E074";
 }
 
-.cc-LTC:before {
+.cc.LTC:before {
   content: "\E075";
 }
 
-.cc-MAID-alt:before {
+.cc.MAID-alt:before {
   content: "\E076";
 }
 
-.cc-MAID:before {
+.cc.MAID:before {
   content: "\E077";
 }
 
-.cc-MINT-alt:before {
+.cc.MINT-alt:before {
   content: "\E078";
 }
 
-.cc-MINT:before {
+.cc.MINT:before {
   content: "\E079";
 }
 
-.cc-MONA-alt:before {
+.cc.MONA-alt:before {
   content: "\E07A";
 }
 
-.cc-MONA:before {
+.cc.MONA:before {
   content: "\E07B";
 }
 
-.cc-MRC:before {
+.cc.MRC:before {
   content: "\E07C";
 }
 
-.cc-MSC-alt:before {
+.cc.MSC-alt:before {
   content: "\E07D";
 }
 
-.cc-MSC:before {
+.cc.MSC:before {
   content: "\E07E";
 }
 
-.cc-MTR-alt:before {
+.cc.MTR-alt:before {
   content: "\E07F";
 }
 
-.cc-MTR:before {
+.cc.MTR:before {
   content: "\E080";
 }
 
-.cc-MUE-alt:before {
+.cc.MUE-alt:before {
   content: "\E081";
 }
 
-.cc-MUE:before {
+.cc.MUE:before {
   content: "\E082";
 }
 
-.cc-NBT:before {
+.cc.NBT:before {
   content: "\E083";
 }
 
-.cc-NEOS-alt:before {
+.cc.NEOS-alt:before {
   content: "\E084";
 }
 
-.cc-NEOS:before {
+.cc.NEOS:before {
   content: "\E085";
 }
 
-.cc-NEU-alt:before {
+.cc.NEU-alt:before {
   content: "\E086";
 }
 
-.cc-NEU:before {
+.cc.NEU:before {
   content: "\E087";
 }
 
-.cc-NLG-alt:before {
+.cc.NLG-alt:before {
   content: "\E088";
 }
 
-.cc-NLG:before {
+.cc.NLG:before {
   content: "\E089";
 }
 
-.cc-NMC-alt:before {
+.cc.NMC-alt:before {
   content: "\E08A";
 }
 
-.cc-NMC:before {
+.cc.NMC:before {
   content: "\E08B";
 }
 
-.cc-NOTE-alt:before {
+.cc.NOTE-alt:before {
   content: "\E08C";
 }
 
-.cc-NOTE:before {
+.cc.NOTE:before {
   content: "\E08D";
 }
 
-.cc-NVC-alt:before {
+.cc.NVC-alt:before {
   content: "\E08E";
 }
 
-.cc-NVC:before {
+.cc.NVC:before {
   content: "\E08F";
 }
 
-.cc-NXT-alt:before {
+.cc.NXT-alt:before {
   content: "\E090";
 }
 
-.cc-NXT:before {
+.cc.NXT:before {
   content: "\E091";
 }
 
-.cc-OK-alt:before {
+.cc.OK-alt:before {
   content: "\E092";
 }
 
-.cc-OK:before {
+.cc.OK:before {
   content: "\E093";
 }
 
-.cc-OMNI-alt:before {
+.cc.OMNI-alt:before {
   content: "\E094";
 }
 
-.cc-OMNI:before {
+.cc.OMNI:before {
   content: "\E095";
 }
 
-.cc-OPAL-alt:before {
+.cc.OPAL-alt:before {
   content: "\E096";
 }
 
-.cc-OPAL:before {
+.cc.OPAL:before {
   content: "\E097";
 }
 
-.cc-PIGGY-alt:before {
+.cc.PIGGY-alt:before {
   content: "\E098";
 }
 
-.cc-PIGGY:before {
+.cc.PIGGY:before {
   content: "\E099";
 }
 
-.cc-PINK-alt:before {
+.cc.PINK-alt:before {
   content: "\E09A";
 }
 
-.cc-PINK:before {
+.cc.PINK:before {
   content: "\E09B";
 }
 
-.cc-PIVX-alt:before {
+.cc.PIVX-alt:before {
   content: "\E09C";
 }
 
-.cc-PIVX:before {
+.cc.PIVX:before {
   content: "\E09D";
 }
 
-.cc-POT-alt:before {
+.cc.POT-alt:before {
   content: "\E09E";
 }
 
-.cc-POT:before {
+.cc.POT:before {
   content: "\E09F";
 }
 
-.cc-PPC-alt:before {
+.cc.PPC-alt:before {
   content: "\E0A0";
 }
 
-.cc-PPC:before {
+.cc.PPC:before {
   content: "\E0A1";
 }
 
-.cc-QRK-alt:before {
+.cc.QRK-alt:before {
   content: "\E0A2";
 }
 
-.cc-QRK:before {
+.cc.QRK:before {
   content: "\E0A3";
 }
 
-.cc-RADS-alt:before {
+.cc.RADS-alt:before {
   content: "\E0A4";
 }
 
-.cc-RADS:before {
+.cc.RADS:before {
   content: "\E0A5";
 }
 
-.cc-RBIES-alt:before {
+.cc.RBIES-alt:before {
   content: "\E0A6";
 }
 
-.cc-RBIES:before {
+.cc.RBIES:before {
   content: "\E0A7";
 }
 
-.cc-RBT-alt:before {
+.cc.RBT-alt:before {
   content: "\E0A8";
 }
 
-.cc-RBT:before {
+.cc.RBT:before {
   content: "\E0A9";
 }
 
-.cc-RBY-alt:before {
+.cc.RBY-alt:before {
   content: "\E0AA";
 }
 
-.cc-RBY:before {
+.cc.RBY:before {
   content: "\E0AB";
 }
 
-.cc-RDD-alt:before {
+.cc.RDD-alt:before {
   content: "\E0AC";
 }
 
-.cc-RDD:before {
+.cc.RDD:before {
   content: "\E0AD";
 }
 
-.cc-REP-alt:before {
+.cc.REP-alt:before {
   content: "\E0AE";
 }
 
-.cc-REP:before {
+.cc.REP:before {
   content: "\E0AF";
 }
 
-.cc-RISE-alt:before {
+.cc.RISE-alt:before {
   content: "\E0B0";
 }
 
-.cc-RISE:before {
+.cc.RISE:before {
   content: "\E0B1";
 }
 
-.cc-SAR-alt:before {
+.cc.SAR-alt:before {
   content: "\E0B2";
 }
 
-.cc-SAR:before {
+.cc.SAR:before {
   content: "\E0B3";
 }
 
-.cc-SCOT-alt:before {
+.cc.SCOT-alt:before {
   content: "\E0B4";
 }
 
-.cc-SCOT:before {
+.cc.SCOT:before {
   content: "\E0B5";
 }
 
-.cc-SDC-alt:before {
+.cc.SDC-alt:before {
   content: "\E0B6";
 }
 
-.cc-SDC:before {
+.cc.SDC:before {
   content: "\E0B7";
 }
 
-.cc-SIA-alt:before {
+.cc.SIA-alt:before {
   content: "\E0B8";
 }
 
-.cc-SIA:before {
+.cc.SIA:before {
   content: "\E0B9";
 }
 
-.cc-SJCX-alt:before {
+.cc.SJCX-alt:before {
   content: "\E0BA";
 }
 
-.cc-SJCX:before {
+.cc.SJCX:before {
   content: "\E0BB";
 }
 
-.cc-SLG-alt:before {
+.cc.SLG-alt:before {
   content: "\E0BC";
 }
 
-.cc-SLG:before {
+.cc.SLG:before {
   content: "\E0BD";
 }
 
-.cc-SLS-alt:before {
+.cc.SLS-alt:before {
   content: "\E0BE";
 }
 
-.cc-SLS:before {
+.cc.SLS:before {
   content: "\E0BF";
 }
 
-.cc-SNRG-alt:before {
+.cc.SNRG-alt:before {
   content: "\E0C0";
 }
 
-.cc-SNRG:before {
+.cc.SNRG:before {
   content: "\E0C1";
 }
 
-.cc-START-alt:before {
+.cc.START-alt:before {
   content: "\E0C2";
 }
 
-.cc-START:before {
+.cc.START:before {
   content: "\E0C3";
 }
 
-.cc-STEEM-alt:before {
+.cc.STEEM-alt:before {
   content: "\E0C4";
 }
 
-.cc-STEEM:before {
+.cc.STEEM:before {
   content: "\E0C5";
 }
 
-.cc-STR-alt:before {
+.cc.STR-alt:before {
   content: "\E0C6";
 }
 
-.cc-STR:before {
+.cc.STR:before {
   content: "\E0C7";
 }
 
-.cc-STRAT-alt:before {
+.cc.STRAT-alt:before {
   content: "\E0C8";
 }
 
-.cc-STRAT:before {
+.cc.STRAT:before {
   content: "\E0C9";
 }
 
-.cc-SWIFT-alt:before {
+.cc.SWIFT-alt:before {
   content: "\E0CA";
 }
 
-.cc-SWIFT:before {
+.cc.SWIFT:before {
   content: "\E0CB";
 }
 
-.cc-SYNC-alt:before {
+.cc.SYNC-alt:before {
   content: "\E0CC";
 }
 
-.cc-SYNC:before {
+.cc.SYNC:before {
   content: "\E0CD";
 }
 
-.cc-SYS-alt:before {
+.cc.SYS-alt:before {
   content: "\E0CE";
 }
 
-.cc-SYS:before {
+.cc.SYS:before {
   content: "\E0CF";
 }
 
-.cc-TRIG-alt:before {
+.cc.TRIG-alt:before {
   content: "\E0D0";
 }
 
-.cc-TRIG:before {
+.cc.TRIG:before {
   content: "\E0D1";
 }
 
-.cc-TX-alt:before {
+.cc.TX-alt:before {
   content: "\E0D2";
 }
 
-.cc-TX:before {
+.cc.TX:before {
   content: "\E0D3";
 }
 
-.cc-UBQ-alt:before {
+.cc.UBQ-alt:before {
   content: "\E0D4";
 }
 
-.cc-UBQ:before {
+.cc.UBQ:before {
   content: "\E0D5";
 }
 
-.cc-UNITY-alt:before {
+.cc.UNITY-alt:before {
   content: "\E0D6";
 }
 
-.cc-UNITY:before {
+.cc.UNITY:before {
   content: "\E0D7";
 }
 
-.cc-USDT-alt:before {
+.cc.USDT-alt:before {
   content: "\E0D8";
 }
 
-.cc-USDT:before {
+.cc.USDT:before {
   content: "\E0D9";
 }
 
-.cc-VIOR-alt:before {
+.cc.VIOR-alt:before {
   content: "\E0DA";
 }
 
-.cc-VIOR:before {
+.cc.VIOR:before {
   content: "\E0DB";
 }
 
-.cc-VNL-alt:before {
+.cc.VNL-alt:before {
   content: "\E0DC";
 }
 
-.cc-VNL:before {
+.cc.VNL:before {
   content: "\E0DD";
 }
 
-.cc-VPN-alt:before {
+.cc.VPN-alt:before {
   content: "\E0DE";
 }
 
-.cc-VPN:before {
+.cc.VPN:before {
   content: "\E0DF";
 }
 
-.cc-VRC-alt:before {
+.cc.VRC-alt:before {
   content: "\E0E0";
 }
 
-.cc-VRC:before {
+.cc.VRC:before {
   content: "\E0E1";
 }
 
-.cc-VTC-alt:before {
+.cc.VTC-alt:before {
   content: "\E0E2";
 }
 
-.cc-VTC:before {
+.cc.VTC:before {
   content: "\E0E3";
 }
 
-.cc-WAVES-alt:before {
+.cc.WAVES-alt:before {
   content: "\E0E4";
 }
 
-.cc-WAVES:before {
+.cc.WAVES:before {
   content: "\E0E5";
 }
 
-.cc-XAI-alt:before {
+.cc.XAI-alt:before {
   content: "\E0E6";
 }
 
-.cc-XAI:before {
+.cc.XAI:before {
   content: "\E0E7";
 }
 
-.cc-XBS-alt:before {
+.cc.XBS-alt:before {
   content: "\E0E8";
 }
 
-.cc-XBS:before {
+.cc.XBS:before {
   content: "\E0E9";
 }
 
-.cc-XCP-alt:before {
+.cc.XCP-alt:before {
   content: "\E0EA";
 }
 
-.cc-XCP:before {
+.cc.XCP:before {
   content: "\E0EB";
 }
 
-.cc-XEM-alt:before {
+.cc.XEM-alt:before {
   content: "\E0EC";
 }
 
-.cc-XEM:before {
+.cc.XEM:before {
   content: "\E0ED";
 }
 
-.cc-XMR:before {
+.cc.XMR:before {
   content: "\E0EE";
 }
 
-.cc-XPM-alt:before {
+.cc.XPM-alt:before {
   content: "\E0EF";
 }
 
-.cc-XPM:before {
+.cc.XPM:before {
   content: "\E0F0";
 }
 
-.cc-XRP-alt:before {
+.cc.XRP-alt:before {
   content: "\E0F1";
 }
 
-.cc-XRP:before {
+.cc.XRP:before {
   content: "\E0F2";
 }
 
-.cc-XVG-alt:before {
+.cc.XVG-alt:before {
   content: "\E0F3";
 }
 
-.cc-XVG:before {
+.cc.XVG:before {
   content: "\E0F4";
 }
 
-.cc-YBC-alt:before {
+.cc.YBC-alt:before {
   content: "\E0F5";
 }
 
-.cc-YBC:before {
+.cc.YBC:before {
   content: "\E0F6";
 }
 
-.cc-ZEC-alt:before {
+.cc.ZEC-alt:before {
   content: "\E0F7";
 }
 
-.cc-ZEC:before {
+.cc.ZEC:before {
   content: "\E0F8";
 }
 
-.cc-ZEIT-alt:before {
+.cc.ZEIT-alt:before {
   content: "\E0F9";
 }
 
-.cc-ZEIT:before {
+.cc.ZEIT:before {
   content: "\E0FA";
 }
