Rename BCC -> BCH for Bitcoin Cash
BCC is the symbol for Bitconnect
BCH is the symbol for Bitcoin Cash

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -15,7 +15,7 @@
 .BRX { color: #a8c300; }
 .BSD { color: #1186E7; }
 .BTA { color: #210094; }
-.BTC, .BCC { color: #F7931A; }
+.BTC, .BCH { color: #F7931A; }
 .BTCD { color: #2A72DC; }
 .BTS { color: #03A9E0; }
 .CLAM { color: #D6AB31; }
